[tool.poetry]
name = "keyvalue"
version = "0.1.0"
description = ""
authors = ["seik <ivanmartinga@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.1"
loguru = "^0.5.3"
pynamodb = "^4.3.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
httpx = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
